agregar funcionalidad al paginado, prev next y current

--- a/client/src/styles/paginado.module.css
+++ b/client/src/styles/paginado.module.css
@@ -8,3 +8,11 @@
     position: relative;
     top: -2px;
 }
+
+.paginaActual{
+    display: inline-block;
+    margin: 5px;    
+    cursor: pointer;
+    width: 15px;
+    background-color: chocolate;
+}
